# SO2P_2

./: CMakeLists.txt  README.md
Headers/: City.h  Common.h  Customer.h  Hairdresser.h  Parameters.h  Salon.h  Scissors.h  Supplies.h  Visualizer.h
Source/: City.cpp  Common.cpp  Customer.cpp  Hairdresser.cpp  Salon.cpp  Scissors.cpp  Supplies.cpp  Visualizer.cpp  main.cpp
